Conversion to @hashgraph/sdk v2 syntax

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "chat",
+  "name": "Hedera Chat for sdk v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hashgraph/sdk": "^1.1.4",
-    "dotenv": "^8.2.0",
+    "@hashgraph/sdk": "^2.0.25-beta.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "inquirer": "^7.0.4",
     "open": "^7.0.0",
@@ -19,6 +19,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Cooper-Kunz/hello-hedera-chat-js.git"
+    "url": "git@github.com:scalemaildev/hedera-hcs-chat-js-v2.git"
   }
 }
