--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:scalemaildev/hedera-hcs-chat-js-v2.git"
+    "url": "git://github.com/Cooper-Kunz/hello-hedera-chat-js.git"
   }
 }
