--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hashgraph/sdk": "^1.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "inquirer": "^7.0.4",
     "open": "^7.0.0",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "text-encoding": "^0.7.0"
   },
   "repository": {
