--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@hashgraph/sdk": "^2.0.30",
+    "body-parser": "^1.19.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "inquirer": "^7.0.4",
